--- a/css/guidelines.css
+++ b/css/guidelines.css
@@ -4,11 +4,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 10rem;
+
+    padding: 0 15rem;
 }
 
 .hero h1 {
-    font-size: 6rem;
+    font-size: 7rem;
 }
 
 .hero h1 span {
@@ -20,11 +21,11 @@
 }
 
 .preventive-measures {
-    padding: 5rem 10rem 0;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 5rem;
     place-items: center;
+    padding: 5rem 15rem 0;
+    gap: 7rem;
 }
 
 .preventive-measures h3 {
@@ -35,7 +36,7 @@
 }
 
 .preventive-measures h1 {
-    font-size: 5rem;
+    font-size: 6rem;
 }
 
 .preventive-measures ul {
@@ -43,15 +44,15 @@
 }
 
 .vaccination {
-    padding: 10rem;
+    padding: 10rem 15rem;
+    gap: 7rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 5rem;
     place-items: center;
 }
 
 .vaccination h1 {
-    font-size: 5rem;
+    font-size: 6rem;
 }
 
 .vaccination ul {
@@ -64,7 +65,8 @@
 
 .facts {
     position: relative;
-    padding: 10rem 10rem 0;
+
+    padding: 10rem 15rem 0;
 }
 
 .facts h3 {
@@ -120,34 +122,116 @@
     object-fit: cover;
 }
 
-@media screen and (min-width: 1556px) {
+@media screen and (max-width: 1440px) {
     .hero {
-        padding: 0 15rem;
+        padding: 0 10rem;
     }
 
     .hero h1 {
-        font-size: 7rem;
+        font-size: 6rem;
     }
 
     .preventive-measures {
-        padding: 5rem 15rem 0;
-        gap: 7rem;
+        padding: 5rem 10rem 0;
+        gap: 5rem;
     }
 
     .preventive-measures h1 {
-        font-size: 6rem;
+        font-size: 5rem;
     }
 
     .vaccination {
-        padding: 10rem 15rem;
-        gap: 7rem;
+        padding: 10rem;
+        gap: 5rem;
     }
 
     .vaccination h1 {
-        font-size: 6rem;
+        font-size: 5rem;
     }
 
     .facts {
-        padding: 10rem 15rem 0;
+        padding: 10rem 10rem 0;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    .hero {
+        padding: 0 5rem;
+    }
+
+    .hero h1 {
+        font-size: 6rem;
+    }
+
+    .preventive-measures {
+        grid-template-columns: 1fr;
+        padding: 5rem 5rem 0;
+        gap: 3rem;
+        place-items: unset;
+    }
+
+    .preventive-measures h1 {
+        font-size: 4rem;
+    }
+
+    .preventive-measures .img-container {
+        height: 100%;
+    }
+
+    .vaccination {
+        padding: 10rem 5rem;
+        grid-template-columns: 1fr;
+        gap: 3rem;
+        place-items: unset;
+    }
+
+    .vaccination h1 {
+        font-size: 4rem;
+    }
+
+    .facts {
+        padding: 10rem 5rem 0;
+    }
+}
+
+@media screen and (max-width: 864px) {
+    .hero {
+        padding: 0 2rem;
+    }
+
+    .hero h1 {
+        font-size: 5rem;
+    }
+
+    .preventive-measures {
+        padding: 5rem 2rem 0;
+        gap: 2rem;
+    }
+
+    .preventive-measures h1 {
+        font-size: 3rem;
+    }
+
+    .vaccination {
+        padding: 10rem 2rem;
+        gap: 2rem;
+    }
+
+    .vaccination h1 {
+        font-size: 3rem;
+    }
+
+    .facts {
+        padding: 10rem 2rem 0;
+    }
+
+    .facts h1 {
+        font-size: 3rem;
+    }
+}
+
+@media screen and (max-width: 468px) {
+    .hero h1 {
+        font-size: 3rem;
     }
 }
