--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ html {
 body {
     background-color: var(--primary-background);
     color: var(--secondary-text);
+    font-size: 1.25rem;
 }
 
 img {
@@ -64,7 +65,7 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 2rem 10rem;
+    padding: 2rem 15rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -73,6 +74,18 @@ nav {
     border-bottom: 2px solid var(--border);
     z-index: 2;
     font-size: 1rem;
+}
+
+nav .burger {
+    display: none;
+    cursor: pointer;
+}
+
+nav .burger .burger-line {
+    width: 36px;
+    height: 1px;
+    background-color: var(--primary-text);
+    margin: 4px 0;
 }
 
 nav ul {
@@ -120,7 +133,7 @@ nav ul li:last-child a:hover {
 footer {
     position: relative;
     text-align: center;
-    padding: 15rem 0 5rem;
+    padding: 15rem 2rem 5rem;
 }
 
 .smooth-scroll {
@@ -146,7 +159,7 @@ footer {
 
 .references {
     position: relative;
-    padding: 10rem 10rem 0;
+    padding: 10rem 15rem 0;
 }
 
 .references h3 {
@@ -169,16 +182,83 @@ footer {
     color: var(--primary-accent);
 }
 
-@media screen and (min-width: 1556px) {
+@media screen and (max-width: 1440px) {
     body {
-        font-size: 1.25rem;
+        font-size: 1rem;
     }
 
     nav {
-        padding: 2rem 15rem;
+        padding: 2rem 10rem;
     }
 
     .references {
-        padding: 10rem 15rem 0;
+        padding: 10rem 10rem 0;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    nav {
+        padding: 2rem 5rem;
+    }
+
+    .references {
+        padding: 10rem 5rem 0;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .smooth-scroll {
+        position: static;
+    }
+}
+
+@media screen and (max-width: 864px) {
+    nav {
+        padding: 2rem;
+    }
+
+    nav .burger {
+        display: block;
+    }
+
+    nav .burger .burger-line {
+        transition: 1s transform cubic-bezier(0.16, 1, 0.3, 1);
+        will-change: transform;
+    }
+
+    nav .burger .burger-line:nth-child(1).open {
+        transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    nav .burger .burger-line:nth-child(2).open {
+        transform: rotate(-45deg) translate(-2px, 3px);
+    }
+
+    nav ul {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        z-index: -1;
+        background-color: var(--primary-background);
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        transform: translateY(-100%);
+        transition: 1s transform cubic-bezier(0.16, 1, 0.3, 1);
+        will-change: transform;
+    }
+
+    nav ul.open {
+        transform: translateY(0);
+    }
+
+    nav ul li {
+        margin: 2rem 0 !important;
+    }
+
+    .references {
+        padding: 10rem 2rem 0;
     }
 }
