--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
 
 html {
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -182,7 +183,7 @@ footer {
     color: var(--primary-accent);
 }
 
-@media screen and (max-width: 1440px) {
+@media screen and (max-width: 1556px) {
     body {
         font-size: 1rem;
     }
