--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,10 @@ footer {
     color: var(--primary-accent);
 }
 
+[data-scroll] {
+    will-change: transform;
+}
+
 @media screen and (max-width: 1600px) {
     body {
         font-size: 1rem;
